# game_reviewer

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html  package-lock.json  package.json
doc/: game_reviewer_bg.81510668.wasm  game_reviewer_bg.cd7468de.wasm.br  index.html  index.html.br  index.js  static.80fe29cb.js  static.80fe29cb.js.map.br  static.8c47419f.css.map.br  static.edc809a5.css  static.edc809a5.css.map  static.edc809a5.css.map.br
docs/: Cargo.b4d810f7.toml  game_reviewer_bg.81510668.wasm  game_reviewer_bg.cd7468de.wasm  index-1a33f13cb8ed6078.js  index-1a33f13cb8ed6078_bg.wasm  index-ef9fd1b4cc07b5f6.js  index.html  index.js  index.js.map  static.40af5fc6.js  static.40af5fc6.js.br  static.40af5fc6.js.map.br  static.80fe29cb.js.map  static.c943c0a2.js  static.c943c0a2.js.map  static.e31bb0bc.css.map  static.e31bb0bc.js  static.e31bb0bc.js.map  style-3641f04c7de79f44.css  style-42ffbe8bb9f28d1e.css  style-e77d046b4d32800c.css  worker.js
public/: index-90c5cec9821ed6ee.js  index-90c5cec9821ed6ee_bg.wasm  index-ef9fd1b4cc07b5f6_bg.wasm  index.html  pwa.webmanifest  style-4636d3edfaaf677e.css  sw.js
src/: lib.rs  main.rs  sw.rs
src/models/: event_bus.rs  play.rs  playlist.rs  video.rs
src/pages/: main.rs
src/views/: mod.rs  play.rs  playlist.rs  video.rs
static/: index.html  index.js  style.scss
