[package]
name = "game_reviewer"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dodrio-ext = { git = "https://github.com/extraymond/dodrio-ext" }
thiserror = "1.0.11"
anyhow = "1.0.26"
femme = "1.3.0"
log = "0.4.8"
cfg-if = "0.1.10"
futures = "0.3.4"
js-sys = "0.3.35"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
strum_macros = "0.18.0"
strum = "0.18.0"
gloo = "0.2.0"

[dependencies.web-sys]
version = "0.3.35"
features = [
    "HtmlInputElement",
    "File",
    "FileList",
    "Blob",
    "Url",
    "EventTarget",
    "FileReader",
    "ProgressEvent",
    "BlobPropertyBag",
    "MediaSource",
    "SourceBuffer",
    "HtmlMediaElement",
    "MediaStream",
    "MediaSourceEndOfStreamError",
    "KeyboardEvent"
]


[features]
default = ["console_error_panic_hook", "wee_alloc"]
