[package]
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"
name = "game_reviewer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afterglow = {git = "https://github.com/extraymond/afterglow"}
anyhow = "1.0.34"
async-trait = "0.1.41"
bincode = "1.3.1"
cfg-if = "1.0.0"
console_error_panic_hook = {version = "0.1.6", optional = true}
femme = "2.1.1"
futures = "0.3.8"
futures-timer = {version = "3.0.2", features = ["wasm-bindgen"]}
gloo = "0.2.1"
js-sys = "0.3.45"
log = "0.4.11"
serde = {version = "1.0.117", features = ["derive"]}
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.59"
strum = "0.19.5"
strum_macros = "0.19.4"
thiserror = "1.0.22"
typed-html = {git = "https://github.com/bodil/typed-html", features = ["dodrio_macro"]}
wee_alloc = {version = "0.4.5", optional = true}

[dependencies.web-sys]
features = [
  "HtmlInputElement",
  "File",
  "FileList",
  "Blob",
  "Url",
  "EventTarget",
  "FileReader",
  "ProgressEvent",
  "BlobPropertyBag",
  "MediaSource",
  "SourceBuffer",
  "HtmlMediaElement",
  "MediaStream",
  "MediaSourceEndOfStreamError",
  "KeyboardEvent",
  "ServiceWorkerGlobalScope",
  "Navigator",
  "ServiceWorkerRegistration",
  "ServiceWorkerContainer",
  "Notification",
  "Storage",
  "IdbFactory",
  "IdbOpenDbRequest",
  "IdbDatabase",
  "IdbTransaction",
  "DomStringList",
  "IdbTransactionMode",
  "IdbObjectStore",
  "IdbObjectStoreParameters",
]
version = "0.3.45"

[features]
default = ["console_error_panic_hook", "wee_alloc"]
